-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
Qt Creator 4.12.0-rc1
-
None
-
-
7b1ff6578624760b05e6dd9233abf8720a084076
If QtC crashes (e.g. when pressing Build for Run Configuration "XYZ"), qbs continues to run consuming 100% of one CPU core.
Can also be reproduced by starting QtC from the command line and killing it with SIGINT.
For Gerrit Dashboard: QTCREATORBUG-23839 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
297052,2 | qbs session: Keep checking whether stdin is still present | 1.16 | qbs/qbs | Status: MERGED | +2 | +1 |
297169,2 | Session handling: Do not ignore return value of I/O functions | 1.16 | qbs/qbs | Status: MERGED | +2 | +1 |