qbs session: Keep checking whether stdin is still present

Otherwise, we will continue to lock the build directory if the
controlling process dies.
This patch implements the solution for Unix. The Windows one will follow
shortly.

Task-number: QTCREATORBUG-23839
Change-Id: I95ca7f6666e520c78521af1e85b765bc2e266e0f
Reviewed-by: Ivan Komissarov <ABBAPOH@gmail.com>
Reviewed-by: Joerg Bornemann <joerg.bornemann@qt.io>